z-index fix

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1669,7 +1669,6 @@ a {
     position: relative;
     top: 0;
     left: 0;
-    z-index: 10000;
 }
 .christmasLights .line{
     text-align: center;
